test: polishing